--- a/source.ipynb
+++ b/source.ipynb
@@ -5,7 +5,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# {Project Title}📝\n",
+    "# Mass moves mass?📝\n",
     "\n",
     "![Banner](./assets/banner.jpeg)"
    ]
@@ -17,7 +17,9 @@
    "source": [
     "## Topic\n",
     "*What problem are you (or your stakeholder) trying to address?*\n",
-    "📝 <!-- Answer Below -->"
+    "📝 <!-- Answer Below -->\n",
+    "\n",
+    " My question is <b>can ML help predict the greatest body weight to maximize the greatest weight to be lifted within powerlifting/ weight lifting?</b>  "
    ]
   },
   {
@@ -28,7 +30,9 @@
     "## Project Question\n",
     "*What specific question are you seeking to answer with this project?*\n",
     "*This is not the same as the questions you ask to limit the scope of the project.*\n",
-    "📝 <!-- Answer Below -->"
+    "📝 <!-- Answer Below -->\n",
+    "\n",
+    "In weightlifting, everyone knows 'mass moves mass' meaning people who weight more usually move more weight. However, for the people who want to stay in lower weight classes or just maximize their weight classes they ask themeselves: what is the greatest weight for my body to maximize my lifts without gaining crazy amount of weight or going out of my weight class?"
    ]
   },
   {
@@ -38,7 +42,11 @@
    "source": [
     "## What would an answer look like?\n",
     "*What is your hypothesized answer to your question?*\n",
-    "📝 <!-- Answer Below -->"
+    "📝 <!-- Answer Below -->\n",
+    "\n",
+    "The more mass a person is, the greater the weight that can be lifted. However I do want to see how the weight lifted compares within a weight class. For example a weight class of 180lbs-190lbs. I could imagine that the people who weight 190lb would lift heavier, but there would be some outliers who are lighter who could lift more weight.\n",
+    "\n",
+    "Some graphs I would highlight are a line graph between weight and weight lifted for the prediction vs the outcome."
    ]
   },
   {
@@ -49,7 +57,9 @@
     "## Data Sources\n",
     "*What 3 data sources have you identified for this project?*\n",
     "*How are you going to relate these datasets?*\n",
-    "📝 <!-- Answer Below -->"
+    "📝 <!-- Answer Below -->\n",
+    "\n",
+    "The three data sources that I will be using for this project will be the openpowerlifting.csv file (*Had to remove from my data because it exceeded github's size. I have it on my laptop downloads*), the website https://exrx.net/Testing/WeightLifting/DeadliftStandards on all main lifts (Squat, deadlift, and bench), and my own data I have recorded from my lifts as well. I will add my personal data to the powerlifting data to see how my own stats compare to other powerlifters within my weight range. Within the website, I will use the tables to determine where the powerlifters fall into regarding their weight and lifts (If they are itermidiate, advanced, elite, etc.)"
    ]
   },
   {
@@ -64,12 +74,18 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 1,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# Start your code here"
+    "I could not get my imports to work, however I would import pandas and beautiful soup to retreieve my data.\n",
+    "\n",
+    "I would download the openpowerlifting.csv file from Kaggle using opendatasets\n",
+    "\n",
+    "To open the text file I would use the with open function in read mode.\n",
+    "\n",
+    "To read the tables off the website \"https://exrx.net/Testing/WeightLifting/DeadliftStandards\" I would use beautiful soup and scrape the tables off the url. I would do this for squat, deaadlift, and bench and combine all the tables using concat.\n",
+    "\n"
    ]
   },
   {
@@ -84,15 +100,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
       "[NbConvertApp] Converting notebook source.ipynb to python\n",
-      "[NbConvertApp] Writing 1271 bytes to source.py\n"
+      "[NbConvertApp] Writing 3317 bytes to source.py\n"
      ]
     }
    ],
@@ -104,7 +120,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Final-Project-Template-unx06iZ2",
+   "display_name": "final-project-3DSatterley-XLOvHCBO",
    "language": "python",
    "name": "python3"
   },
@@ -123,7 +139,7 @@
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "8f59090b806211711d8ea6da25ee5b1ccb272a75a21b9536283520350d8dfda7"
+    "hash": "7afbde4790cf40b7dc4ccec2095e0a1813b59792bd7bfaa8d306fb5be777ef13"
    }
   }
  },
